kubernetes-logging/ingress-minio.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: minio.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-minio-console
            port:
              number: 9001
